# extremis

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  PUBLISH_DRAFTS.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  publish.yml  test.yml
benchmarks/: README.md  longmemeval_s.py  rejudge.py
docs/: index.html  openapi.json
docs-src/: index.md
docs-src/api/: config.md  extremis.md  hosted-client.md  types.md  wrap-anthropic.md  wrap-openai.md
docs-src/backends/: chroma.md  index.md  migration.md  pinecone.md  postgres.md  s3-vectors.md  sqlite.md  supabase.md
docs-src/concepts/: attention-scoring.md  consolidation.md  hallucination-detection.md  knowledge-graph.md  memory-layers.md  namespaces.md  rl-scoring.md
docs-src/deployment/: render.md  self-hosted.md
docs-src/getting-started/: first-memory.md  installation.md  quickstart.md
docs-src/integrations/: n8n.md  openapi.md
docs-src/mcp/: claude-desktop.md  tools.md
docs-src/sdks/: index.md  typescript.md
docs-src/wrap/: anthropic.md  index.md  openai.md
docs/docs/: 404.html  index.html  sitemap.xml
docs/docs/api/config/: index.html
docs/docs/api/extremis/: index.html
docs/docs/api/hosted-client/: index.html
docs/docs/api/types/: index.html
docs/docs/api/wrap-anthropic/: index.html
docs/docs/api/wrap-openai/: index.html
docs/docs/backends/: index.html
docs/docs/backends/chroma/: index.html
docs/docs/backends/migration/: index.html
docs/docs/backends/pinecone/: index.html
docs/docs/backends/postgres/: index.html
docs/docs/backends/sqlite/: index.html
docs/docs/backends/supabase/: index.html
docs/docs/concepts/attention-scoring/: index.html
docs/docs/concepts/consolidation/: index.html
docs/docs/concepts/knowledge-graph/: index.html
docs/docs/concepts/memory-layers/: index.html
docs/docs/concepts/namespaces/: index.html
docs/docs/concepts/rl-scoring/: index.html
docs/docs/deployment/render/: index.html
docs/docs/deployment/self-hosted/: index.html
docs/docs/getting-started/first-memory/: index.html
docs/docs/getting-started/installation/: index.html
docs/docs/getting-started/quickstart/: index.html
docs/docs/integrations/n8n/: index.html
docs/docs/integrations/openapi/: index.html
docs/docs/mcp/claude-desktop/: index.html
docs/docs/mcp/tools/: index.html
docs/docs/search/: search_index.json
docs/docs/stylesheets/: extra.css
docs/docs/wrap/: index.html
docs/docs/wrap/anthropic/: index.html
docs/docs/wrap/openai/: index.html
n8n-node/: package.json
n8n-node/credentials/: ExtremisApi.credentials.ts
n8n-node/nodes/Extremis/: Extremis.node.ts
results/: longmemeval_s_results.jsonl
sdk/typescript/: .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  transport.ts  types.ts
sdk/typescript/tests/: client.test.ts
src/extremis/: __init__.py  api.py  async_api.py  cli.py  client.py  config.py  demo.py  interfaces.py  migrate.py  types.py
src/extremis/consolidation/: __init__.py  compactor.py  consolidator.py  prompts.py
src/extremis/embeddings/: __init__.py  openai.py  sentence_transformers.py
src/extremis/mcp/: server.py
src/extremis/migrations/: 001_initial_sqlite.sql
src/extremis/observer/: observer.py
src/extremis/scorer/: attention.py
src/extremis/server/: app.py  auth.py  deps.py  tenancy.py
src/extremis/server/routes/: attention.py  health.py  kg.py  memories.py
src/extremis/storage/: chroma.py  kg.py  log.py  pinecone_store.py  postgres.py  recall_reason.py  s3_vectors.py  score_index.py  sqlite.py  supabase_store.py
src/extremis/verification/: __init__.py  consistency.py  faithfulness.py  judge.py  nli.py  recommendations.py
src/extremis/wrap/: __init__.py  anthropic.py  openai.py
src/friday_memory/: api.py  config.py  interfaces.py  types.py
src/friday_memory/consolidation/: consolidator.py
src/friday_memory/embeddings/: sentence_transformers.py
src/friday_memory/mcp/: server.py
src/friday_memory/migrations/: 001_initial_sqlite.sql
src/friday_memory/scorer/: __init__.py  attention.py
src/friday_memory/storage/: __init__.py  kg.py  log.py  postgres.py  sqlite.py
src/lore_ai/: __init__.py  api.py  client.py  config.py  migrate.py  types.py
src/lore_ai/consolidation/: consolidator.py
src/lore_ai/embeddings/: openai.py
src/lore_ai/mcp/: server.py
src/lore_ai/migrations/: 001_initial.sql
src/lore_ai/observer/: __init__.py  observer.py
src/lore_ai/server/: app.py  auth.py  deps.py
src/lore_ai/server/routes/: health.py  memories.py
src/lore_ai/storage/: __init__.py  chroma.py  pinecone_store.py  postgres.py  recall_reason.py  score_index.py  sqlite.py
tests/: conftest.py  test_api.py  test_attention.py  test_chroma.py  test_cli.py  test_consolidator.py  test_core.py  test_hosted_client.py  test_hosted_client_live.py  test_identity_filter.py  test_kg.py  test_mcp.py  test_mcp_server.py  test_migration.py  test_namespace.py  test_new_features.py  test_observer.py  test_openai_embedder.py  test_peekr_integration.py  test_recommendations.py  test_server.py  test_tenant_isolation_live.py  test_verification.py  test_wrap.py
