[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-ai"
version = "0.1.0"
description = "Layered memory platform for AI agents — log-first, RL-scored, consolidation-backed"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ashwani Jha", email = "ashwanijha04@gmail.com" }]
keywords = ["memory", "ai", "agents", "mcp", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/ashwanijha04/lore-ai"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "anthropic>=0.40",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["lore-ai[mcp,postgres]"]

[project.scripts]
lore-ai-mcp = "lore_ai.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
