[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-ai"
version = "0.1.0"
description = "Layered memory platform for AI agents — log-first, RL-scored, consolidation-backed"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ashwani Jha", email = "ashwanijha04@gmail.com" }]
keywords = ["memory", "ai", "agents", "mcp", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/ashwanijha04/lore-ai"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "anthropic>=0.40",
]

[project.optional-dependencies]
mcp      = ["mcp>=1.0"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.3"]
chroma   = ["chromadb>=0.5"]
pinecone = ["pinecone>=3.0"]
openai   = ["openai>=1.0"]
server   = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
client   = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",        # for TestClient + HostedClient tests
    "fastapi>=0.110",     # for server tests
    "ruff>=0.4",
    "mypy>=1.10",
    "chromadb>=0.5",
]
all = ["lore-ai[mcp,postgres,chroma,pinecone,openai,server,client]"]

[project.scripts]
lore-mcp     = "lore_ai.mcp.server:main"
lore-migrate = "lore_ai.migrate:cli"
lore-server  = "lore_ai.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
