[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extremis"
version = "0.2.0"
description = "Layered memory platform for AI agents — log-first, RL-scored, consolidation-backed"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ashwani Jha", email = "ashwanijha04@gmail.com" }]
keywords = ["memory", "ai", "agents", "mcp", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "anthropic>=0.40",
]

[project.urls]
Repository = "https://github.com/ashwanijha04/extremis"

[project.optional-dependencies]
mcp      = ["mcp>=1.0"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.3"]
chroma   = ["chromadb>=0.5"]
pinecone = ["pinecone>=3.0"]
openai   = ["openai>=1.0"]
server   = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
client   = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "ruff>=0.4",
    "mypy>=1.10",
    "chromadb>=0.5",
]
all = ["extremis[mcp,postgres,chroma,pinecone,openai,server,client]"]

[project.scripts]
extremis-mcp     = "extremis.mcp.server:main"
extremis-migrate = "extremis.migrate:cli"
extremis-server  = "extremis.server.app:main"
extremis-demo    = "extremis.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/extremis"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "extremis.storage.chroma",
    "extremis.storage.pinecone_store",
    "extremis.consolidation.consolidator",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/extremis/demo.py",
    "src/extremis/consolidation/compactor.py",
    "src/extremis/storage/pinecone_store.py",
    "src/extremis/storage/postgres.py",
]
